[package]
name = "pwldapd"
version = "0.5.0"
edition = "2024"
description = "LDAP daemon backed by system accounts"

[[bin]]
name = "pwldapd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
libc = "0.2"
pam = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
clap = { version = "4", features = ["derive"] }

[package.metadata.deb]
maintainer = "Michael Paddon <michael@paddon.org>"
copyright = "2026 Michael Paddon <michael@paddon.org>"
license-file = ["LICENSE", "0"]
extended-description = """\
A read-only LDAP server (RFC 4510) that exposes the local POSIX user and \
group database over the LDAP protocol. Bind requests are authenticated via \
PAM. Anonymous binds are accepted. TLS (LDAPS) is supported.\
"""
depends = "$auto, libpam-runtime, adduser"
recommends = "libcap2-bin"
section = "net"
priority = "optional"
conf-files = ["/etc/pam.d/pwldapd"]
maintainer-scripts = "pkg/"
systemd-units = { unit-name = "pwldapd", enable = true }
assets = [
    { source = "target/release/pwldapd", dest = "usr/sbin/pwldapd", mode = "0755" },
    { source = "pwldapd.8", dest = "usr/share/man/man8/pwldapd.8", mode = "0644" },
    { source = "pkg/pwldapd.pam", dest = "etc/pam.d/pwldapd", mode = "0644" },
]
